--- a/style.css
+++ b/style.css
@@ -1,7 +1,18 @@
+:root {
+    --header: 33vh;
+    --footer: 33vh;
+    --main: calc(100vh - calc(var(--header) + var(--footer)));
+    }
+
 * {
     box-sizing: border-box;
     overflow: hidden;
 }
+
+@font-face {
+    font-family: "Roboto";
+    src: url("Roboto-Regular.ttf");
+  }
 
 html, body {
     height: 100%;
@@ -16,16 +27,20 @@ body {
     background-image: url('assets/leaves.jpg');
     background-size: cover;
     height: 100%;
-    width: 30vw;
+    width: 35vw;
     display: flex;
-    justify-content:flex-end;
+    justify-content:space-evenly;
     align-items: center;
     flex-direction: column;
 }
+
 .right {
     background-color: #f0f0f0;
     height: 100%;
-    width: 70vw;
+    width: 65vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .logo-container {
@@ -37,7 +52,7 @@ body {
     align-items: center;
     padding: 15px 0;
     gap: 10px;
-    transform: translateY(-415%);
+    transform: translateY(-18vh);
 }
 
 .logo-container img {
@@ -59,6 +74,107 @@ body {
 }
 
 .credit {
+    position: absolute;
     margin: 0;
     padding: 0 0 15px 0;
+    bottom: 0;
+}
+
+.top-text, button, .login {
+    margin-left: 50px;
+}
+
+.first-top-text, .second-top-text, form legend {
+    font-weight: 900;
+    font-size: 1.5rem;
+    margin: 0;
+}
+
+.first-top-text, .second-top-text {
+    text-wrap:wrap;
+}
+
+form legend {
+    padding: 0 0 10px 0;
+}
+
+button {
+    width: max-content;
+    padding: 15px 50px;
+    border-radius: 8px;
+    border: 0;
+    background-color: #596D48;
+    color: white;
+    font-weight: 600;
+    box-shadow: 2px 2px 5px rgb(0,0,0,0.25);
+}
+
+.top-text {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 50vw;
+    height: var(--header);
+    gap: 2vh;
+}
+
+form {
+    background-color: white;
+    padding: 20px 0 0 50px;
+    box-shadow: 10px 5px 8px rgb(0,0,0,0.2);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: max-content;
+    gap: 10px;
+}
+
+.inputs {
+    display: flex;
+    gap: 1.5vw;
+    flex-wrap: wrap;
+    width: 60%;
+    padding-bottom: 8vh;
+}
+
+.bottom {
+    padding-top: 5vh;
+    width: 100vw;
+    height: var(--footer);
+    display: flex;
+    gap: 30px;
+    flex-direction: column;
+}
+
+.right p, form {
+    font-family: "Roboto";
+}
+
+.login {
+    padding: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.label-and-input-combo {
+    display: flex;
+    flex-direction: column;
+}
+
+.inputs label {
+    font-size: 0.6rem;
+    letter-spacing: 1px;
+    padding-bottom: 2px;
+}
+
+.inputs input {
+    padding: 2px 5px 2px 5px;
+    width: 15vw;
+    min-height: 35px;
+    border: 1px solid #E5E7EB;
+    border-radius: 5px;
+}
+
+#first_name, #email, #password {
+    margin-right: 3vw;
 }
